--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600&display=swap');
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -88,7 +89,7 @@ hr {
  */
 
 pre {
-  font-family: monospace, monospace; /* 1 */
+  font-family: 'Source Sans Pro', sans-serif; /* 1 */
   font-size: 1em; /* 2 */
 }
 
@@ -142,7 +143,7 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace; /* 1 */
+  font-family: 'Source Sans Pro', sans-serif; /* 1 */
   font-size: 1em; /* 2 */
 }
 
@@ -242,7 +243,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: sans-serif; /* 1 */
+  font-family: 'Source Sans Pro', sans-serif; /* 1 */
   font-size: 100%; /* 1 */
   line-height: 1.15; /* 1 */
   margin: 0; /* 2 */
