--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600&display=swap');
 @import 'normalize';
 @import 'syntax';
 @import 'variables';
+
 
 *, *::after, *::before {
   box-sizing: border-box;
@@ -10,8 +12,12 @@ html {
   line-height: 1.5;
 }
 
+*{
+  'Source Sans Pro', sans-serif;
+}
+
 body {
-  font-family: 'Lato', sans-serif;
+  'Source Sans Pro', sans-serif;
   color: $body-color;
   background-color: #fbfbfb;
   margin: 0;
